--- a/config/build.gradle
+++ b/config/build.gradle
@@ -30,33 +30,16 @@ ext {
 
 dependencies {
 
-	// Redis Session Clustering
-	implementation 'org.springframework.session:spring-session-data-redis'
-
-	// JWT
-	implementation 'io.jsonwebtoken:jjwt:0.12.6'
-
-	// Gateway
-	implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
-
-	// Reactor (Spring WebFlux의 리액티브 프로그래밍 라이브러리)
-	testImplementation 'io.projectreactor:reactor-test'
+	// config server
+	implementation 'org.springframework.cloud:spring-cloud-config-server'
 
 	// Eureka client
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-
-	// config client
-	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 
 	// Zipkin
 	implementation 'io.micrometer:micrometer-tracing-bridge-brave'
 	implementation 'io.github.openfeign:feign-micrometer'
 	implementation 'io.zipkin.reporter2:zipkin-reporter-brave'
-
-	// Resilience4j
-	implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.2.0'
-	implementation 'org.springframework.boot:spring-boot-starter-aop'
-	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
 
 	// Spring Boot Actuator
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
@@ -64,12 +47,6 @@ dependencies {
 	// Lombok
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
-
-	// JPA
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-
-	// 인메모리 H2
-	runtimeOnly 'com.h2database:h2'
 
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
