--- a/order/build.gradle
+++ b/order/build.gradle
@@ -33,17 +33,19 @@ dependencies {
 	// Redis Session Clustering
 	implementation 'org.springframework.session:spring-session-data-redis'
 
-	// JWT
-	implementation 'io.jsonwebtoken:jjwt:0.12.6'
-
-	// Gateway
-	implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
-
-	// Reactor (Spring WebFlux의 리액티브 프로그래밍 라이브러리)
-	testImplementation 'io.projectreactor:reactor-test'
+	// QueryDSL 적용을 위한 의존성 (SpringBoot3.0 부터는 jakarta 사용)
+	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+	// QueryDSL APT 의존성 (annotation processing을 위한 의존성)
+	annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
+	// Jakarta API 의존성
+	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
 	// Eureka client
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+
+	// FeignClient, Ribbon
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 
 	// config client
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
