--- a/config/src/main/resources/config-repo/gateway-service.yml
+++ b/config/src/main/resources/config-repo/gateway-service.yml
@@ -22,6 +22,8 @@ spring:
           uri: lb://product-service
           predicates:
             - Path=/products/**
+          filters:
+            - name : WeightRoutingFilterFactory
         - id: auth-service
           uri: lb://auth-service
           predicates:
@@ -55,3 +57,9 @@ management:
     web:
       exposure:
         include: refresh  # [Post] /actuator/refresh 엔드포인트 노출 (config server 변경사항 수동 갱신)
+
+product-service:
+  1:
+    port: 19093
+  2:
+    port: 19094
