--- a/product/build.gradle
+++ b/product/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 
 	// Redis Session Clustering
 	implementation 'org.springframework.session:spring-session-data-redis'
+	implementation 'redis.clients:jedis:5.2.0'
 
 	// QueryDSL 적용을 위한 의존성 (SpringBoot3.0 부터는 jakarta 사용)
 	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
